--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,30 @@ set(CMAKE_AUTOUIC ON)
 set(QT_VERSION 6)
 set(REQUIRED_LIBS Core Network)
 set(REQUIRED_LIBS_QUALIFIED Qt6::Core Qt6::Network)
+set(PROJECT_NAME_SERVER ${PROJECT_NAME}Server)
+set(PROJECT_NAME_CLIENT ${PROJECT_NAME}Client)
+set(PROJECT_NAME_LIB ${PROJECT_NAME}Lib)
 
-add_executable(${PROJECT_NAME}
+add_executable(${PROJECT_NAME_SERVER}
         src/server/main.cpp
         src/server/main.cpp
         src/server/User.cpp
         src/server/User.h
         src/server/SMS.cpp
         src/server/SMS.h
+        src/server/ServerConfig.h
+        src/server/AlzaServer.cpp
+        src/server/AlzaServer.h
+        src/server/AlzaRunnable.cpp
+        src/server/ServerConfig.cpp)
+
+add_executable(${PROJECT_NAME_CLIENT}
+        src/client/main.cpp
+        src/client/AlzaClient.cpp
+        src/client/AlzaClient.h
+        src/client/AlzaRunnable.cpp)
+
+add_library(${PROJECT_NAME_LIB} STATIC
         src/lib/Message.cpp
         src/lib/Message.h
         src/lib/TextMessage.cpp
@@ -38,19 +54,10 @@ add_executable(${PROJECT_NAME}
         src/lib/ImageMessage.h
         src/lib/VideoMessage.cpp
         src/lib/VideoMessage.h
-        src/server/ServerConfig.h
-        src/server/AlzaServer.cpp
-        src/server/AlzaServer.h
-        src/server/AlzaRunnable.cpp
-        src/lib/AlzaRunnable.h
-        src/server/ServerConfig.cpp
         src/lib/Alzachat.h
         src/lib/Logging.cpp
         src/lib/Logging.h
-        src/client/main.cpp
-        src/client/AlzaClient.cpp
-        src/client/AlzaClient.h
-        src/client/AlzaRunnable.cpp)
+        src/lib/AlzaRunnable.h)
 
 if (NOT CMAKE_PREFIX_PATH)
     message(WARNING "CMAKE_PREFIX_PATH is not defined, you may need to set it "
@@ -58,4 +65,8 @@ if (NOT CMAKE_PREFIX_PATH)
 endif ()
 
 find_package(Qt${QT_VERSION} COMPONENTS ${REQUIRED_LIBS} REQUIRED)
-target_link_libraries(${PROJECT_NAME} ${REQUIRED_LIBS_QUALIFIED})
+target_link_libraries(${PROJECT_NAME_LIB} ${REQUIRED_LIBS_QUALIFIED})
+target_link_libraries(${PROJECT_NAME_SERVER} ${PROJECT_NAME_LIB})
+target_link_libraries(${PROJECT_NAME_CLIENT} ${PROJECT_NAME_LIB})
+
+include_directories(src/lib)
